Ass1/.antlr/ZCodeParser.py
# Generated from d:/HCMUT/PPL/2/BTL1/Ass1/ZCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'number'", "'bool'", "'string'", "'return'", 
                     "'var'", "'dynamic'", "'func'", "'for'", "'until'", 
                     "'by'", "'break'", "'continue'", "'if'", "'else'", 
                     "'elif'", "'begin'", "'end'", "'not'", "'and'", "'or'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "<INVALID>", 
                     "<INVALID>", "'true'", "'false'", "'<-'", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'...'", "'=='", "'('", "')'", 
                     "'['", "']'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NEWLINE", 
                      "COMMENT", "TRUE", "FALSE", "ASSIGN", "NOT_EQUAL", 
                      "SMALLER", "EQUALSMALLER", "BIGGER", "EQUALBIGGER", 
                      "ELLIPSIS", "EQUALITY", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "COMMA", "NUM_LIT", "INT", "STR_LIT", "WS", 
                      "ID", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_func_decl = 3
    RULE_para_decl = 4
    RULE_para_list = 5
    RULE_para_prime = 6
    RULE_parameter = 7
    RULE_variable_decl = 8
    RULE_var = 9
    RULE_var_implicit = 10
    RULE_dyn_implicit = 11
    RULE_statementlist = 12
    RULE_statement = 13
    RULE_decl_statement = 14
    RULE_block_statement = 15
    RULE_assignment_statement = 16
    RULE_lhs = 17
    RULE_if_statement = 18
    RULE_else_statement = 19
    RULE_elif_statement = 20
    RULE_for_statement = 21
    RULE_break_statement = 22
    RULE_continue_statement = 23
    RULE_return_statement = 24
    RULE_funcCall_statement = 25
    RULE_expr_list = 26
    RULE_expr = 27
    RULE_relation_expr = 28
    RULE_andOr_expr = 29
    RULE_add_expr = 30
    RULE_mul_expr = 31
    RULE_not_expr = 32
    RULE_sub_expr = 33
    RULE_element_expr = 34
    RULE_func_expr = 35
    RULE_exprd = 36
    RULE_funcCall = 37
    RULE_index_operator = 38
    RULE_array_element = 39
    RULE_data_value = 40
    RULE_array_value = 41
    RULE_arr_list = 42
    RULE_data_type = 43
    RULE_array_type = 44
    RULE_numlist = 45
    RULE_numberliteral = 46
    RULE_boolliteral = 47
    RULE_strliteral = 48
    RULE_newline = 49
    RULE_numtype = 50
    RULE_booltype = 51
    RULE_stringtype = 52
    RULE_returnn = 53
    RULE_vartype = 54
    RULE_dyntype = 55
    RULE_func = 56
    RULE_forword = 57
    RULE_unitlword = 58
    RULE_byword = 59
    RULE_breakword = 60
    RULE_continueword = 61
    RULE_ifword = 62
    RULE_elseword = 63
    RULE_elifword = 64
    RULE_beginn = 65
    RULE_endd = 66
    RULE_notword = 67
    RULE_andword = 68
    RULE_orword = 69
    RULE_addd = 70
    RULE_subb = 71
    RULE_mull = 72
    RULE_divv = 73
    RULE_modd = 74
    RULE_equall = 75

    ruleNames =  [ "program", "decllist", "decl", "func_decl", "para_decl", 
                   "para_list", "para_prime", "parameter", "variable_decl", 
                   "var", "var_implicit", "dyn_implicit", "statementlist", 
                   "statement", "decl_statement", "block_statement", "assignment_statement", 
                   "lhs", "if_statement", "else_statement", "elif_statement", 
                   "for_statement", "break_statement", "continue_statement", 
                   "return_statement", "funcCall_statement", "expr_list", 
                   "expr", "relation_expr", "andOr_expr", "add_expr", "mul_expr", 
                   "not_expr", "sub_expr", "element_expr", "func_expr", 
                   "exprd", "funcCall", "index_operator", "array_element", 
                   "data_value", "array_value", "arr_list", "data_type", 
                   "array_type", "numlist", "numberliteral", "boolliteral", 
                   "strliteral", "newline", "numtype", "booltype", "stringtype", 
                   "returnn", "vartype", "dyntype", "func", "forword", "unitlword", 
                   "byword", "breakword", "continueword", "ifword", "elseword", 
                   "elifword", "beginn", "endd", "notword", "andword", "orword", 
                   "addd", "subb", "mull", "divv", "modd", "equall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    NEWLINE=27
    COMMENT=28
    TRUE=29
    FALSE=30
    ASSIGN=31
    NOT_EQUAL=32
    SMALLER=33
    EQUALSMALLER=34
    BIGGER=35
    EQUALBIGGER=36
    ELLIPSIS=37
    EQUALITY=38
    LPAREN=39
    RPAREN=40
    LBRACE=41
    RBRACE=42
    COMMA=43
    NUM_LIT=44
    INT=45
    STR_LIT=46
    WS=47
    ID=48
    ERROR_CHAR=49
    UNCLOSE_STRING=50
    ILLEGAL_ESCAPE=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 152
                self.match(ZCodeParser.NEWLINE)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.decllist()
            self.state = 159
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decllist




    def decllist(self):

        localctx = ZCodeParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.decl()
                self.state = 162
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Func_declContext,0)


        def variable_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Variable_declContext,0)


        def newline(self):
            return self.getTypedRuleContext(ZCodeParser.NewlineContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.func_decl()
                pass
            elif token in [1, 2, 3, 5, 6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.variable_decl()
                self.state = 169
                self.newline()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(ZCodeParser.FuncContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def para_decl(self):
            return self.getTypedRuleContext(ZCodeParser.Para_declContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Block_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Return_statementContext,0)


        def newline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.NewlineContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.NewlineContext,i)


        def getRuleIndex(self):
            return ZCodeParser.RULE_func_decl




    def func_decl(self):

        localctx = ZCodeParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.func()
            self.state = 174
            self.match(ZCodeParser.ID)
            self.state = 175
            self.para_decl()
            self.state = 179
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 176
                    self.newline() 
                self.state = 181
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27:
                    self.state = 182
                    self.newline()


                self.state = 185
                self.block_statement()
                pass

            elif la_ == 2:
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==27:
                    self.state = 186
                    self.newline()


                self.state = 189
                self.return_statement()
                pass

            elif la_ == 3:
                self.state = 190
                self.newline()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(ZCodeParser.LPAREN, 0)

        def para_list(self):
            return self.getTypedRuleContext(ZCodeParser.Para_listContext,0)


        def RPAREN(self):
            return self.getToken(ZCodeParser.RPAREN, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_para_decl




    def para_decl(self):

        localctx = ZCodeParser.Para_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_para_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(ZCodeParser.LPAREN)
            self.state = 194
            self.para_list()
            self.state = 195
            self.match(ZCodeParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_prime(self):
            return self.getTypedRuleContext(ZCodeParser.Para_primeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_para_list




    def para_list(self):

        localctx = ZCodeParser.Para_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_para_list)
        try:
            self.state = 199
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 197
                self.para_prime()
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(ZCodeParser.ParameterContext,0)


        def para_prime(self):
            return self.getTypedRuleContext(ZCodeParser.Para_primeContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_para_prime




    def para_prime(self):

        localctx = ZCodeParser.Para_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_para_prime)
        self._la = 0 # Token type
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.parameter()
                self.state = 203
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==43:
                    self.state = 202
                    self.match(ZCodeParser.COMMA)


                self.state = 205
                self.para_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 207
                self.parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(ZCodeParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def array_type(self):
            return self.getTypedRuleContext(ZCodeParser.Array_typeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_parameter




    def parameter(self):

        localctx = ZCodeParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        try:
            self.state = 214
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 210
                self.data_type()
                self.state = 211
                self.match(ZCodeParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 213
                self.array_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(ZCodeParser.VarContext,0)


        def var_implicit(self):
            return self.getTypedRuleContext(ZCodeParser.Var_implicitContext,0)


        def dyn_implicit(self):
            return self.getTypedRuleContext(ZCodeParser.Dyn_implicitContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_variable_decl




    def variable_decl(self):

        localctx = ZCodeParser.Variable_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variable_decl)
        try:
            self.state = 219
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 216
                self.var()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 217
                self.var_implicit()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 218
                self.dyn_implicit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(ZCodeParser.Data_typeContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def array_type(self):
            return self.getTypedRuleContext(ZCodeParser.Array_typeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_var




    def var(self):

        localctx = ZCodeParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.state = 232
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 221
                self.data_type()
                self.state = 222
                self.match(ZCodeParser.ID)
                self.state = 225
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==31:
                    self.state = 223
                    self.match(ZCodeParser.ASSIGN)
                    self.state = 224
                    self.expr()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 227
                self.array_type()
                self.state = 230
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==31:
                    self.state = 228
                    self.match(ZCodeParser.ASSIGN)
                    self.state = 229
                    self.expr()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_implicitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vartype(self):
            return self.getTypedRuleContext(ZCodeParser.VartypeContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_var_implicit




    def var_implicit(self):

        localctx = ZCodeParser.Var_implicitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_implicit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 234
            self.vartype()
            self.state = 235
            self.match(ZCodeParser.ID)
            self.state = 236
            self.match(ZCodeParser.ASSIGN)
            self.state = 237
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dyn_implicitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dyntype(self):
            return self.getTypedRuleContext(ZCodeParser.DyntypeContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_dyn_implicit




    def dyn_implicit(self):

        localctx = ZCodeParser.Dyn_implicitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_dyn_implicit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 239
            self.dyntype()
            self.state = 240
            self.match(ZCodeParser.ID)
            self.state = 243
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 241
                self.match(ZCodeParser.ASSIGN)
                self.state = 242
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(ZCodeParser.StatementContext,0)


        def statementlist(self):
            return self.getTypedRuleContext(ZCodeParser.StatementlistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_statementlist




    def statementlist(self):

        localctx = ZCodeParser.StatementlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statementlist)
        try:
            self.state = 249
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 5, 6, 8, 11, 12, 13, 16, 48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 245
                self.statement()
                self.state = 246
                self.statementlist()
                pass
            elif token in [17, 27]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Decl_statementContext,0)


        def assignment_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Assignment_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(ZCodeParser.If_statementContext,0)


        def for_statement(self):
            return self.getTypedRuleContext(ZCodeParser.For_statementContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Break_statementContext,0)


        def continue_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Continue_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Return_statementContext,0)


        def funcCall_statement(self):
            return self.getTypedRuleContext(ZCodeParser.FuncCall_statementContext,0)


        def block_statement(self):
            return self.getTypedRuleContext(ZCodeParser.Block_statementContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_statement




    def statement(self):

        localctx = ZCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_statement)
        try:
            self.state = 260
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 251
                self.decl_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 252
                self.assignment_statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 253
                self.if_statement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 254
                self.for_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 255
                self.break_statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 256
                self.continue_statement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 257
                self.return_statement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 258
                self.funcCall_statement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 259
                self.block_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_statementContext(ParserRuleContext):
        __slots__ = 'parser'
